# Setember

./: Makefile  README.md  Setember.sln  pyproject.toml
src/Setember/: Encrypter.cs  FileManager.cs  Makefile  Program.cs
