[tool.poetry]
name = "setember"
version = "0.1.0"
description = "A ransomware type software that encrypt files."
authors = ["Daniel Lima", "Aspect"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
